@@ -1,34 +1,34 @@
-Copyright (c) 2010, 2024, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2026, Oracle and/or its affiliates. All rights reserved.
 
 # Compile and Run JDBC Sample Programs
 
 ## IMPORTANT PRE-REQUISITES
 
-1. Manually Configure the Sample DSN for the Sample Programs. Refer to _quickstart/classic/html/developer/sample\_dsn\_setup.html_.
+1. Manually Configure the Sample DSN for the Sample Programs. Refer to _quickstart/html/developer/sample\_dsn\_setup.html_.
 
 2. Set up the Instance Environment Variables e.g. If your TimesTen instance location is under /home/timesten/instance/<instance_name> directory, execute the following command:
 
     `source /home/timesten/instance/<instance_name>/bin/ttenv.sh`
 
 3. Set up quickstart environment variables:
-      
-    Unix/Linux: 	  	
     
-    `. quickstart/classic/ttquickstartenv.sh`
-    
+    Unix/Linux:
+
+    `. quickstart/ttquickstartenv.sh`
+
     or
-    
-    `source quickstart/classic/ttquickstartenv.csh`
+
+    `source quickstart/ttquickstartenv.csh`
 
     Windows:
 
-    `call quickstart/classic/ttquickstartenv.cmd`
-
-4. Run the _quickstart/classic/sample\_scripts/createdb/build\_sampledb_ script, which creates the sample database and user accounts that are used by the sample programs. This script creates the TimesTen user accounts and prompts you for the desired user passwords.
+    `call quickstart/ttquickstartenv.cmd`
+ 
+4. Run the _quickstart/sample\_scripts/createdb/build\_sampledb_ script, which creates the sample database and user accounts that are used by the sample programs. This script creates the TimesTen user accounts and prompts you for the desired user passwords.
 
     Unix/Linux:
     
-    `cd  quickstart/classic/sample_scripts/createdb`
+    `cd  quickstart/sample_scripts/createdb`
     
     `./build_sampledb.sh`
 
@@ -37,13 +37,47 @@ Copyright (c) 2010, 2024, Oracle and/or its affiliates. All rights reserved.
 
 To compile the sample programs in the sample\_code/jdbc directory, use the relevant TimesTen supported Java compiler for your platform (eg Sun, HP, JRocket or IBM JDK) to compile each sample program. Refer to the [OracleTimesTen In-Memory Database Installation Guide](https://docs.oracle.com/cd/E21901_01/timesten.1122/e21632/toc.htm) for the list of supported JDKs for your preferred platform.
 
+For JDK 11, 17, 21, and 25, the TimesTen JDBC JAR is timesten_home/install/lib/ttjdbc<jdk_version>.jar, where <jdk_version> indicates the JDK version, 11, 17, 21, or 25, for example, ttjdbc25.jar for JDK 25. The JDBC JARs are also packaged as a Java module with the Java module name **timesten.jdbc** and JMS/XLA JAR (timestenjmsxla.jar) too with module name **timesten.jmsxla** so you can use both for module compilation (import them in module-info.java), if your JDK supports modules. 
+
+**NOTE:** Since XLA does not support applications linked with a driver manager library or the client/server library, the asyncJMS and syncJMS demos cannot be compiled or run in client-only installations, also since this use the Javax JMS you need to add the jms.jar to environment CLASSPATH for releases after TT221 which can be found in 3rdparty directory `/home/timesten/instance/tt<version>/3rdparty`. For the  asyncJMS2 and syncJMS2 which are sample programs using Jakarta JMS rather than Javax JMS, require separate download of jakarta.jms.jar file. Once this jar file is downloaded, location to this jar will need to be added to environment variable CLASSPATH. Support for Jakarta JMS has been added to the TimesTen release from version 22.1.1.20.0 onward and **jakarta becomes the default** option if both jakarta.jms and javax.jms JARs are found in CLASSPATH.
+
+### Compile with JDK 11, 17 and 21
+
 To compile specific program:
 
-`javac <progname>.java`
+`javac -d out <progname>.java`
 
 To compile the sample programs all at once:
 
-`javac *.java`
+`javac -d out *.java`
+
+The "-d" is necessary to build the module application in "out" directory. If you check the "out" directory you will find package directories.
+
+### Compile using the TimesTen JDBC Module JDK 11, 17, 21 and 25
+
+#### Compile as a non-modular or mixed application:
+
+To compile specific program:
+
+`javac -cp $CLASSPATH --module-path <module_path> -d out <progname>.java`
+
+To compile the sample programs all at once:
+
+`javac -cp $CLASSPATH --module-path <module_path> -d out *.java`
+
+Where <module_path> is timesten_home/install/lib/ttjdbc<jdk_version>.jar:<existing_path_to_modules>. The "-d" is necessary to build the module application in "out" directory. If you check the "out" directory you will find package directories. 
+
+#### Compile as a modular application:
+
+To compile specific program:
+
+`javac --module-path <module_path> -d out module-info.java <progname>.java`
+
+To compile the sample programs all at once:
+
+`javac --module-path <module_path> -d out *.java`
+
+Where <module_path> is timesten_home/install/lib/ttjdbc<jdk_version>.jar:<existing_path_to_modules>. The "-d" is necessary to build the module application in "out" directory. If you check the "out" directory you will find module-info.class and package directories. The module name, dependencies and exports are defined in module-info.java file (you need this to compile a module), and all java files you are going to compile into a module need package name as shown in java files ("jdbc.demo", "jms.demo" and "jakarta.jms.demo"). For this demos when you want to **compile as a module application** you can use $CLASSPATH (set in **IMPORTANT PRE-REQUISITES** section) as your <module_path> to ensure all dependendies are imported as modules and have "out" directories of jdbc and jms demos included. When you make your own module application (not this demos) make sure to define your own module-info.java (module name, dependencies, exports, etc.) and name your packages accordingly.
 
 **NOTE:** Since XLA does not support applications linked with a driver manager library or the client/server library, the asyncJMS and syncJMS demos cannot be compiled or run in client-only installations. Additionally, asyncJMS2 and syncJMS2 which are sample programs using Jakarta JMS rather than Javax JMS, require separate download of jakarta.jms.jar file. Once this jar file is downloaded, location to this jar will need to be added to environment variable CLASSPATH. Support for Jakarta JMS has been added to the TimesTen release from version 22.1.1.20.0 onward.
 
@@ -55,7 +89,29 @@ option in order to run the 64-bit JVM.
 
 **NOTE:** On some platforms, such as macOS, you may need to explicitly pass a setting for java.library path to the JVM in order to run the samples. For example:
 
-    java -Djava.library.path=${TIMESTEN_HOME}/install/lib <progname>
+    java -Djava.library.path=${TIMESTEN_HOME}/install/lib <packagename><progname>
+
+**NOTE:** When you want to run using the TimesTen JDBC Module with JDK 11, 17, 21 and 25. The module-path and enable-native-access need to be added. For example:
+    
+Run as a non-modular or mixed application
+
+    java -cp $CLASSPATH --module-path <module_path> --enable-native-access="timesten.jdbc" jdbc.demo.<progname> …
+
+    java -cp $CLASSPATH --module-path <module_path> --enable-native-access="timesten.jdbc,timesten.jmsxla" jms.demo.<progname> …
+
+    java -cp $CLASSPATH --module-path <module_path> --enable-native-access="timesten.jdbc,timesten.jmsxla" jakarta.jms.demo.<progname> …
+
+Run as a modular application
+
+    java --module-path <module_path> --enable-native-access="timesten.jdbc" --module my.jdbc.app.module/jdbc.demo.<progname> …
+
+    java --module-path <module_path> --enable-native-access="timesten.jdbc,timesten.jmsxla" --module my.jms.app.module/jms.demo.<progname> …
+
+    java --module-path <module_path> --enable-native-access="timesten.jdbc,timesten.jmsxla" --module my.jakarta.jms.app.module/jakarta.jms.demo.<progname> …
+
+Make sure to also include **timesten.jmsxla** in **--enable-native-access** for jms programs like **--enable-native-access=timesten.jdbc,timesten.jmsxla**. As shown in command, the name of the module you compiled is **my.jdbc.app.module**, **my.jms.app.module** (if they are jms programs of javax directory) or **my.jakarta.jms.app.module** (jms programs of jakarta directory) while the package of the class you are going to execute is **jdbc.demo**, **jms.demo** (jms programs of javax directory) or **jakarta.jms.demo** (jms programs of jakarta directory), the name of the module and dependencies are defined in module-info.java file. As a reminder for this demos when you want to **run this as a module application** you can use $CLASSPATH (set in **IMPORTANT PRE-REQUISITES** section) as your <module_path>. When you build and run your own module application (not this demos) make sure to define your own module-info.java (module name, dependencies, exports, etc.) and name your packages accordingly.
+
+### Sample programs instructions and examples
 
 **asyncJMS** or **asyncJMS2**
 
@@ -79,17 +135,29 @@ Examples:
 
   Connect using the default DSN sampledb, uid=xlauser, prompted password, listen to APPUSER.CUSTOMER
   
-  `java asyncJMS`
+  `java jms.demo.asyncJMS`
+
+  or
+
+  `java jakarta.jms.demo.asyncJMS2`
 
   Connect using the default DSN sampledb, uid=xlauser, listen to APPUSER.CUSTOMER
  
-  `java asyncJMS -xlauser <xlausername>`
+  `java jms.demo.asyncJMS -xlauser <xlausername>`
+
+  or
+
+  `java jakarta.jms.demo.asyncJMS2 -xlauser <xlausername>`
 
   Connect using the default DSN sampledb, uid=xlauser and listen to the MYUSER.CUSTOMER table
   
-  `java asyncJMS -xlauser <xlausername> -schema myUser`
+  `java jms.demo.asyncJMS -xlauser <xlausername> -schema myUser`
 
-  For the full syntax of the program, use "java asyncJMS -h" or "java asyncJMS2 -h".
+  or
+
+  `java jakarta.jms.demo.asyncJMS2 -xlauser <xlausername> -schema myUser`
+
+  For the full syntax of the program, use "java jms.demo.asyncJMS -h" or "java jakarta.jms.demo.asyncJMS2 -h".
 
 **level1**
 
@@ -109,17 +177,17 @@ Examples:
 
   Connect using default dsn sampledb, uid=appuser, and direct-linked
   
-  `java level1`
+  `java jdbc.demo.level1`
 
   Connect using default dsn and uid, and client/server mode
   
-  `java level1 -c`
+  `java jdbc.demo.level1 -c`
 
   Connect using the dsn **my_dsn**
   
-  `java level1 my_dsn`
+  `java jdbc.demo.level1 my_dsn`
 
-  For the full syntax of the program, use "java level1 -h".
+  For the full syntax of the program, use "java jdbc.demo.level1 -h".
 
 **level2**
 
@@ -143,17 +211,17 @@ Examples:
 
   Connect using default dsn sampledb, uid=appuser, and direct-linked
   
-  `java level2`
+  `java jdbc.demo.level2`
 
   Connect using default dsn and uid, and client/server mode
   
-  `java level2 -c`
+  `java jdbc.demo.level2 -c`
 
   Connect using the dsn **my_dsn**
   
-  `java level2 my_dsn`
+  `java jdbc.demo.level2 my_dsn`
 
-  For the full syntax of the program, use "java level2 -h".
+  For the full syntax of the program, use "java jdbc.demo.level2 -h".
 
 **level3**
 
@@ -169,17 +237,17 @@ Examples:
 
   Connect using default dsn sampledb, uid=appuser, and direct-linked
   
-  `java level3`
+  `java jdbc.demo.level3`
 
   Connect using default dsn and uid, and client/server mode
   
-  `java level3 -c`
+  `java jdbc.demo.level3 -c`
 
   Connect using the dsn **my_dsn**
   
-  `java level3 my_dsn`
+  `java jdbc.demo.level3 my_dsn`
 
-  For the full syntax of the program, use "java level3 -h".
+  For the full syntax of the program, use "java jdbc.demo.level3 -h".
 
 **level4**
 
@@ -189,17 +257,17 @@ Examples:
 
   Connect using default dsn sampledb, uid=appuser, and direct-linked
   
-  `java level4`
+  `java jdbc.demo.level4`
 
   Connect using default dsn and uid, and client/server mode
   
-  `java level4 -c`
+  `java jdbc.demo.level4 -c`
 
   Connect using the dsn **my_dsn**
   
-  `java level4 my_dsn`
+  `java jdbc.demo.level4 my_dsn`
 
-  For the full syntax of the program, use "java level4 -h".
+  For the full syntax of the program, use "java jdbc.demo.level4 -h".
 
 **plsqlJDBC**
 
@@ -220,9 +288,9 @@ Examples:
 
   Run the program using the default DSN sampledb, it will prompt for the username and password
   
-  `java plsqlJDBC`
+  `java jdbc.demo.plsqlJDBC`
 
-For the full syntax of the program, use "java plsqlJDBC -help".
+For the full syntax of the program, use "java jdbc.demo.plsqlJDBC -help".
 
 **syncJMS** or **syncJMS2**
 
@@ -246,17 +314,29 @@ Examples:
 
   Connect using the default DSN sampledb, uid=xlauser, prompted password, listen to APPUSER.CUSTOMER
   
-  `java syncJMS`
+  `java jms.demo.syncJMS`
+
+  or
+
+  `java jakarta.jms.demo.syncJMS2`
 
   Connect using the default DSN sampledb, uid=xlauser, listen to APPUSER.CUSTOMER
   
-  `java syncJMS -xlauser <xlausername>`
+  `java jms.demo.syncJMS -xlauser <xlausername>`
+
+  or
+
+  `java jakarta.jms.demo.syncJMS2 -xlauser <xlausername>`
 
   Connect using the default DSN sampledb, uid=xlauser and listen to the MYUSER.PRODUCT table
   
-  `java syncJMS -xlauser <xlausername> -schema myUser -table product `
+  `java jms.demo.syncJMS -xlauser <xlausername> -schema myUser -table product `
 
-For the full syntax of the program, use "java syncJMS -h" or "java syncJMS2 -h".
+  or
+
+  `java jakarta.jms.demo.syncJMS2 -xlauser <xlausername> -schema myUser -table product `
+
+For the full syntax of the program, use "java jms.demo.syncJMS -h" or "java jakarta.jms.demo.syncJMS2 -h".
 
 **Tptbm**
 
@@ -274,17 +354,17 @@ Examples:
   
 Run the program using default workload mix of 80% reads, 20% updates, dsn=sampledb, uid=appuser
   
-  `java Tptbm`
+  `java jdbc.demo.Tptbm`
 
 80% reads, 20% updates, 2 threads, populate the table with 400,000 rows, and run for 60 seconds with a 10 second ramp-upand ramp-down time.
   
-  `java Tptbm -threads 2 -key 200 -sec 60`
+  `java jdbc.demo.Tptbm -threads 2 -key 200 -sec 60`
 
 85% reads, 10% inserts, 5% updates, 4 threads.
   
-  `java Tptbm -threads 4 -read 85 -insert 10 `
+  `java jdbc.demo.Tptbm -threads 4 -read 85 -insert 10 `
 
-For the full syntax of the program, use "java Tptbm -h".
+For the full syntax of the program, use "java jdbc.demo.Tptbm -h".
 
 
 **TTJdbcExamples**
@@ -303,17 +383,17 @@ Examples:
 
   Run all examples, connect using the default DSN (sampledb) as user appuser
   
-  `java TTJdbcExamples`
+  `java jdbc.demo.TTJdbcExamples`
 
   To run only example 2
   
-  `java TTJdbcExamples -run 2`
+  `java jdbc.demo.TTJdbcExamples -run 2`
 
   To run the 64-bit JDK for example 2
   
-  `java -d64 TTJdbcExamples -run 2`
+  `java -d64 jdbc.demo.TTJdbcExamples -run 2`
 
-  For the full syntax of the program, use "java TTJdbcExamples -h".
+  For the full syntax of the program, use "java jdbc.demo.TTJdbcExamples -h".
 
 
 **JsonSample**
@@ -324,11 +404,11 @@ Example:
 
   Run the program using the default DSN (sampledb) and clean up on completion
   
-  `java JsonSample`
+  `java jdbc.demo.JsonSample`
 
   Run the program and retain the JSON table after completion
   
-  `java JsonSample -keep`
+  `java jdbc.demo.JsonSample -keep`
 
 
 For more information on Java programming with Oracle TimesTen, refer to the [Oracle TimesTen In-Memory Database Java Developer's Guide](https://docs.oracle.com/en/database/other-databases/timesten/26.1/java-developer/index.html).
